<resources>
    <string name="app_name">Group#13_InClass03</string>
    <string name="name">Name:</string>
    <string name="email">Email:</string>
    <string name="id">ID:</string>
    <string name="enter_name">Enter Name</string>
    <string name="enter_email">Enter Email</string>
    <string name="enter_id">Enter ID</string>
    <string name="dept">Dept:</string>
    <string name="submit">Submit</string>
    <string name="select">Select</string>
    <string name="computer_science">Computer Science</string>
    <string name="software_info_systems">Software Info. Systems</string>
    <string name="bio_informatics">Bio Informatics</string>
    <string name="data_science">Data Science</string>
    <string name="cancel">Cancel</string>
    <string name="no_name">Please enter a name</string>
    <string name="no_email">Please enter an email address</string>
    <string name="no_id">Please enter an ID</string>
    <string name="no_department">Please enter a department</string>
    <string name="select_department">Please select a department</string>
    <string name="SELECTED_DEPARTMENT">SELECTED_DEPARTMENT</string>
    <string name="registration">Registration</string>
    <string name="department">Department</string>
    <string name="profile">Profile</string>
</resources>